--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,17 +49,35 @@ file = "README.md"
 Homepage = "https://github.com/michimussato/OpenStudioLandscapes-Dagster-Showcase"
 
 [tool.dagster]
-module_name = "OpenStudioLandscapes-Dagster-Showcase.definitions"
+module_name = "OpenStudioLandscapes.Dagster.Showcase.definitions"
 project_name = "OpenStudioLandscapes-Dagster-Showcase"
 
 [tool.setuptools]
 include-package-data = true
-packages = [
-    "OpenStudioLandscapes.Dagster.Showcase",
-]
 platforms = [
     "Linux",
 ]
 
-[tool.setuptools.package-dir]
-"" = "src"
+[tool.setuptools.packages.find]
+exclude = [
+    "tests",
+]
+namespaces = true
+where = [
+    "src",
+]
+
+
+
+
+#[tool.setuptools]
+#include-package-data = true
+#packages = [
+#    "OpenStudioLandscapes.Dagster.Showcase",
+#]
+#platforms = [
+#    "Linux",
+#]
+#
+#[tool.setuptools.package-dir]
+#"" = "src"
